--- a/latex/appuntiTesi.tex
+++ b/latex/appuntiTesi.tex
@@ -978,6 +978,7 @@ In questa sezione viene presentato il concetto di \textbf{Abbondanza} che in un 
      
 \end{definition}
 \begin{lemma}{}{}
+    \label{ab4ever}
     Sia $(r,S,T)$ l'input di una $\Delta\text{-}improvment\ phase$. Se l'arco $(i,j)$ è abbondate prima dell'incremento allora rimmarrà abbondante per tutti gli incrementi successivi.
 \end{lemma}
 \begin{proof}
@@ -985,6 +986,214 @@ In questa sezione viene presentato il concetto di \textbf{Abbondanza} che in un 
     $\Delta' \le \frac{\Delta}{4m} $ e ricordando che $r_{ij} \ge 2\Delta $ si deduce che 
     allora \[r'_{ij} \ge r_{ij}-\Delta \ge\Delta\ge  2\Delta'\]\QED
 \end{proof}
+
+\begin{definition}{Grafo di Abbondanza}{}
+    Dato un network $G$ si definisce il suo \textbf{grafo di abbastanza} $G^{ab}$ come: 
+    \[G^{ab} := (N(G), \{(i,j)| (i,j)\in E(G)\land r_{ij}\ge 2\Delta\})\]
+\end{definition}
+\begin{obs}{}{}
+    Per il \hyperref[ab4ever]{lemma 7} proseguendo con le iterazioni il grafo di abbondanza può solo acquisire nuovi archi, mai perderli.
+\end{obs}
+
+IL grafo di abbondanza è utile in vari modi: 
+\begin{enumerate}
+    \item Tutti i cicli formati da archi abbondanti vengono \textit{contratti} in un solo nodo
+    \item Tutti i nodi che adiacenti solo ad archi abbondanti o di capacità troppo piccola, vengono \textit{compattati}
+\end{enumerate}
+L'algoritmo mantiene in oltre la chiusura transitiva di tutti i nodi collegati tra loro da un \textbf{abundant path}, ovvero un cammino composto solo da archi abbondanti. \\
+Se esiste un abundant path tra il nodi $i$ e $j$, ciò si indica con $i\implies j$, e l'informazione viene mantenuta in una matrice \textbf{M}$_{n\times n}$, dove nella posizione 
+\textbf{M}$_{i,j}$ si trova il nodo che precede $j$ nel percorso che parte da $i$. Se durante le iterazioni si creano più percorsi viene comunque mantenuto il primo trovato.
+
+La chiusura transitiva può essere mantenuta in tempo $O(nm)$ utilizzando l'algoritmo di Italiano. 
+In questo modo è sempre possibile (vedremo di seguito che contrarre il grafo non lo impedisce e non ne altera il costo) ricostruire un percorso abbondante $P$ in $O(|P|)$
+\newpage
+\section{Contractions of abundant graph}
+Vediamo ora come sfruttare l'abundant graph per contrarre il grafo su cui calcolare il max-flow e rendere l'algoritmo più efficiente.
+
+Analizziamo tre contrazioni di esempio differenti:\\
+\\
+Supponiamo che esistano due nodi $i$ e $j$ tali che $r_{ij} \ge 2\Delta$ e $r_{ji} \ge 2\Delta$
+
+Possiamo quindi contrarre i due nodi in uno unico che preservi gli archi di entrambi
+\[\begin{tabular}{ccc}
+    \begin{tikzpicture}[node distance={15mm}, thick , main/.style = {draw, circle}] 
+    % Disegna i nodi del grafo
+    
+
+    \node[main] (0) {$s$};
+    \node[main] (3) [right of= 0 ] {$i$};
+    \node[main] (4) [right of=3] {$j$};
+    \node[main] (1) [below of = 3 ] {3};
+    \node[main] (2) [above of = 3] {$1$};
+    
+    \node[main] (6) [above of=4] {$2$};
+    \node[main] (5) [below of=4] {$4$};
+    \node[main] (7) [right of=4] {$t$};
+    % Disegna gli archi orientati
+    \draw[->] (0) [bend right] to (1);
+    \draw[->] (0) [bend left] to (2);
+    \draw[->] (0) to (3);
+    \draw[->] (3) [red, bend left] to (4);
+    \node at (2.25,0.5) {$2\Delta$};
+    \node at (2.25,-0.5) {$2\Delta$};
+    \draw[->] (4) [red, bend left] to (3);
+    
+    \draw[->] (2) to (6);
+    \draw[->] (4)[bend left] to (1);
+    \draw[->] (4)[bend right] to (6);
+    \draw[->] (6)[bend right] to (3);
+    \draw[->] (4) to (7);
+    \draw[->] (1) to (5);
+    \draw[->] (6)[bend left] to (7);
+    \draw[->] (5)[bend right] to (7);
+
+
+\end{tikzpicture}&\begin{tikzpicture}
+    \node {$\implies$};% Freccia verso destra
+    \node at (0,1.4) {};
+    \node at (0,-1.6) {};
+\end{tikzpicture}  &
+\begin{tikzpicture}[node distance={19mm}, thick , main/.style = {draw, circle}] 
+    % Disegna i nodi del grafo
+    
+    
+    \node[main] (m)  {$i$-$j$};
+    \node[main] (0) [left of = m ]{$s$};
+    \node[main] (1) at (-0.8,1.45) {1};
+    
+    \node[main] (2) at (0.8,1.45) {$2$};
+
+    \node[main] (3) at (-0.8,-1.45) {$3$};
+    \node[main] (4) at (0.8,-1.45) {$4$};
+
+    \node[main] (5) [right of = m] {t};
+    % Disegna gli archi orientati
+
+    
+    \draw[->] (0) to (m);
+    \draw[->] (0)[bend left] to (1);
+    \draw[->] (0)[bend right] to (3);
+
+    \draw[->] (1) to (2);
+
+    \draw[->] (2)[bend right] to (m);
+    \draw[->] (m)[bend right] to (2);
+    \draw[->] (m)[bend left] to (3);
+    \draw[->] (2)[bend left] to (5);
+    \draw[->] (m) to (5);
+    \draw[->] (3) to (4);  
+    \draw[->] (4)[bend right] to (5);
+
+\end{tikzpicture}
+\end{tabular}\]
+
+È possibile contrarre archi esterni  
+
+\[\begin{tabular}{ccc}
+    \begin{tikzpicture}[node distance={19mm}, thick , main/.style = {draw, circle}] 
+    % Disegna i nodi del grafo
+    
+    \node[main] (0) {$s$};
+    \node[main] (1) [above right of = 0] {1};
+    \node[main] (2) [below right of = 0] {2};
+    \node[main] (3) [right of = 1] {3};
+    \node[main] (4) [right of = 2] {4};
+    \node[main] (5) [below right of = 3] {$t$};
+    
+    \draw[->] (0) [red] to (1);
+    \draw[->] (1) to (3);
+    \draw[->] (0) to (2);
+    \draw[->] (2) to (4);
+    \draw[->] (3) to (5);
+    \draw[->] (4) [red] to (5);
+    \draw[->] (1) to (2);
+    \draw[->] (3) to (4);
+
+    \node at (0.4,0.9) {$2\Delta$};
+    \node at (4.3,-0.9) {$2\Delta$};
+
+\end{tikzpicture}&\begin{tikzpicture}
+    \node {$\implies$};% Freccia verso destra
+    \node at (0,1.4) {};
+    \node at (0,-1.6) {};
+\end{tikzpicture}  &
+\begin{tikzpicture}[node distance={19mm}, thick , main/.style = {draw, circle}] 
+    % Disegna i nodi del grafo
+    \node[main] (0) {$s$-$1$};
+    \node[main] (3) at (2,1.4) {$3$};
+    \node[main] (2) at (2,-1.4) {$2$};
+    \node[main] (4) at (4,0) {4-$t$};
+
+    \draw[->] (0) to (3);
+    \draw[->] (0) [bend left = 10] to (2);
+    \draw[->] (0) [bend right = 10] to (2);
+    
+    
+    \draw[->] (2) to (4);
+    \draw[->] (3) [bend left = 10] to (4);
+    \draw[->] (3) [bend right = 10] to (4);
+    
+
+\end{tikzpicture}
+\end{tabular}\]
+
+E dunque tutti i cicli abbondanti
+
+\[\begin{tabular}{ccc}
+    \begin{tikzpicture}[node distance={18mm}, thick , main/.style = {draw, circle}] 
+    % Disegna i nodi del grafo
+    
+    \node[main] (0) {$s$};
+    \node[main] (1) at (1*1.4,0) {1};
+    \node[main] (2) at (2*1.4,0.577*1.4) {2};
+    \node[main] (3) at (2*1.4,-0.577*1.4) {3};
+    \node[main] (4) at (3*1.4,0) {$t$};
+    \node[main] (5) at (1*1.4,1.154*1.4) {$5$};
+    \node[main] (6) at (1*1.4,-1.154*1.4) {$6$};
+
+    \draw[->] (0) [bend left] to (5);
+    \draw[->] (0) [bend right] to (6);
+    \draw[->] (0)  to (1);
+    \draw[->] (1)  to (2);
+    \draw[->] (2)  to (3);
+    \draw[->] (3)  to (1);
+    \draw[->] (2)  to (4);
+    \draw[->] (3)  to (4);
+    \draw[->] (5) [bend left = 45] to (4);
+    \draw[->] (6) [bend right = 45] to (4);
+    
+
+\end{tikzpicture}&\begin{tikzpicture}
+    \node {$\implies$};% Freccia verso destra
+    \node at (0,1.4) {};
+    \node at (0,-1.6) {};
+\end{tikzpicture}  &
+\begin{tikzpicture}[node distance={19mm}, thick , main/.style = {draw, circle}] 
+    % Disegna i nodi del grafo
+    \node[main] (0) {$s$};
+    \node[main] (1) at (1.5*1.4,0) {1-2-3};
+    \node[main] (5) at (1.5*1.4,1.154*1.4) {$5$};
+    \node[main] (6) at (1.5*1.4,-1.154*1.4) {$6$};
+    \node[main] (4) at (3*1.4,0) {$t$};
+
+    \draw[->] (0) [bend left] to (5);
+    \draw[->] (5) [bend left] to (4);
+    \draw[->] (0) [bend right] to (6);
+    \draw[->] (6) [bend right] to (4);
+
+    \draw[->] (0) to (1);
+    \draw[->] (1) to (4);
+    
+  
+    
+
+\end{tikzpicture}
+\end{tabular}\]
+
+
+
+
+
 
 
 \newpage
